web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__append__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees_1\nappend employees_2\n"
---
SELECT
  *
FROM
  employees_1
UNION ALL
SELECT
  *
FROM
  employees_2
